--- a/index.html
+++ b/index.html
@@ -141,29 +141,49 @@
         <div class="row">
           <div class="col">
             <h2>Please Find the below courses</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugit ab ipsam consequatur soluta, quaerat fugiat neque provident facere iste.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              fugit ab ipsam consequatur soluta, quaerat fugiat neque provident
+              facere iste.
+            </p>
           </div>
         </div>
         <div class="row mt-2">
           <div class="col-md-4">
-            <img src="images/web_tech.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/web_tech.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
           <div class="col-md-4">
-            <img src="images/bootstrap.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/bootstrap.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
           <div class="col-md-4">
-            <img src="images/node.JPG" class="img-fluid img-gallery" alt="">
+            <img src="images/node.JPG" class="img-fluid img-gallery" alt="" />
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-4">
-            <img src="images/mongodb.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/mongodb.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
           <div class="col-md-4">
-            <img src="images/react.JPG" class="img-fluid img-gallery" alt="">
+            <img src="images/react.JPG" class="img-fluid img-gallery" alt="" />
           </div>
           <div class="col-md-4">
-            <img src="images/angular.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/angular.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -174,10 +194,15 @@
         <div class="row align-items-center">
           <div class="col-md-9">
             <h1>Learn more about India's No.1 Institute for trainings</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facere!</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
+              facere!
+            </p>
           </div>
           <div class="col-md-3">
-            <button class="btn btn-outline-primary btn-block">Learn More</button>
+            <button class="btn btn-outline-primary btn-block">
+              Learn More
+            </button>
           </div>
         </div>
       </div>
@@ -188,37 +213,73 @@
         <div class="row align-items-center mt-3">
           <div class="col-md-6">
             <h1 class="font-weight-bold">React Course</h1>
-            <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sunt ducimus consequatur quo soluta dicta facilis, laudantium labore iusto dolorem repellat quibusdam sed harum alias doloremque, deleniti culpa quisquam exercitationem laboriosam cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!</p>
+            <p class="lead text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              sunt ducimus consequatur quo soluta dicta facilis, laudantium
+              labore iusto dolorem repellat quibusdam sed harum alias
+              doloremque, deleniti culpa quisquam exercitationem laboriosam
+              cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!
+            </p>
           </div>
           <div class="col-md-6">
-            <img src="images/react.JPG" class="img-fluid img-gallery" alt="">
+            <img src="images/react.JPG" class="img-fluid img-gallery" alt="" />
           </div>
         </div>
         <div class="row align-items-center mt-3">
           <div class="col-md-6">
-            <img src="images/angular.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/angular.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
           <div class="col-md-6">
             <h1 class="font-weight-bold">Angular Course</h1>
-            <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sunt ducimus consequatur quo soluta dicta facilis, laudantium labore iusto dolorem repellat quibusdam sed harum alias doloremque, deleniti culpa quisquam exercitationem laboriosam cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!</p>
+            <p class="lead text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              sunt ducimus consequatur quo soluta dicta facilis, laudantium
+              labore iusto dolorem repellat quibusdam sed harum alias
+              doloremque, deleniti culpa quisquam exercitationem laboriosam
+              cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!
+            </p>
           </div>
         </div>
         <div class="row align-items-center mt-3">
           <div class="col-md-6">
             <h1 class="font-weight-bold">WebTech Course</h1>
-            <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sunt ducimus consequatur quo soluta dicta facilis, laudantium labore iusto dolorem repellat quibusdam sed harum alias doloremque, deleniti culpa quisquam exercitationem laboriosam cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!</p>
+            <p class="lead text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              sunt ducimus consequatur quo soluta dicta facilis, laudantium
+              labore iusto dolorem repellat quibusdam sed harum alias
+              doloremque, deleniti culpa quisquam exercitationem laboriosam
+              cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!
+            </p>
           </div>
           <div class="col-md-6">
-            <img src="images/web_tech.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/web_tech.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
         </div>
         <div class="row align-items-center mt-3">
           <div class="col-md-6">
-            <img src="images/bootstrap.JPG" class="img-fluid img-gallery" alt="">
+            <img
+              src="images/bootstrap.JPG"
+              class="img-fluid img-gallery"
+              alt=""
+            />
           </div>
           <div class="col-md-6">
             <h1 class="font-weight-bold">Bootstrap Course</h1>
-            <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sunt ducimus consequatur quo soluta dicta facilis, laudantium labore iusto dolorem repellat quibusdam sed harum alias doloremque, deleniti culpa quisquam exercitationem laboriosam cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!</p>
+            <p class="lead text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              sunt ducimus consequatur quo soluta dicta facilis, laudantium
+              labore iusto dolorem repellat quibusdam sed harum alias
+              doloremque, deleniti culpa quisquam exercitationem laboriosam
+              cupiditate hic nemo aut ipsam asperiores. Esse, placeat deserunt!
+            </p>
           </div>
         </div>
       </div>
@@ -228,18 +289,32 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col">
-            <h1 class="text-edu font-weight-bold">Meet our professional trainers</h1>
-            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, eum.</p>
+            <h1 class="text-edu font-weight-bold">
+              Meet our professional trainers
+            </h1>
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
+              eum.
+            </p>
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-3">
             <div class="card text-dark trainer-card">
               <div class="card-body bg-light trainer-card">
-                <img src="images/person1.jpg" class="img-fluid w-50 rounded-circle img-thumbnail trainer-img" alt="">
+                <img
+                  src="images/person1.jpg"
+                  class="img-fluid w-50 rounded-circle img-thumbnail trainer-img"
+                  alt=""
+                />
                 <h2 class="mt-2">Laura Williams</h2>
                 <p class="lead">Trainer</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, voluptate.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam excepturi, vero nesciunt veniam molestias ratione.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Error, voluptate.Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam
+                  excepturi, vero nesciunt veniam molestias ratione.
+                </p>
                 <div class="d-flex mt-4">
                   <i class="fab fa-facebook fa-2x px-3 text-primary"></i>
                   <i class="fab fa-youtube fa-2x px-3 text-danger"></i>
@@ -252,10 +327,19 @@
           <div class="col-md-3">
             <div class="card text-dark trainer-card">
               <div class="card-body bg-light trainer-card">
-                <img src="images/person2.jpg" class="img-fluid w-50 rounded-circle img-thumbnail trainer-img" alt="">
+                <img
+                  src="images/person2.jpg"
+                  class="img-fluid w-50 rounded-circle img-thumbnail trainer-img"
+                  alt=""
+                />
                 <h2 class="mt-2">Kelly Hellen</h2>
                 <p class="lead">Trainer</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, voluptate.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam excepturi, vero nesciunt veniam molestias ratione.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Error, voluptate.Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam
+                  excepturi, vero nesciunt veniam molestias ratione.
+                </p>
                 <div class="d-flex mt-4">
                   <i class="fab fa-facebook fa-2x px-3 text-primary"></i>
                   <i class="fab fa-youtube fa-2x px-3 text-danger"></i>
@@ -268,10 +352,19 @@
           <div class="col-md-3">
             <div class="card text-dark trainer-card">
               <div class="card-body bg-light trainer-card">
-                <img src="images/person3.jpg" class="img-fluid w-50 rounded-circle img-thumbnail trainer-img" alt="">
+                <img
+                  src="images/person3.jpg"
+                  class="img-fluid w-50 rounded-circle img-thumbnail trainer-img"
+                  alt=""
+                />
                 <h2 class="mt-2">John White</h2>
                 <p class="lead">Trainer</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, voluptate.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam excepturi, vero nesciunt veniam molestias ratione.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Error, voluptate.Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam
+                  excepturi, vero nesciunt veniam molestias ratione.
+                </p>
                 <div class="d-flex mt-4">
                   <i class="fab fa-facebook fa-2x px-3 text-primary"></i>
                   <i class="fab fa-youtube fa-2x px-3 text-danger"></i>
@@ -284,10 +377,19 @@
           <div class="col-md-3">
             <div class="card text-dark trainer-card">
               <div class="card-body bg-light trainer-card">
-                <img src="images/person4.jpg" class="img-fluid w-50 rounded-circle img-thumbnail trainer-img" alt="">
+                <img
+                  src="images/person4.jpg"
+                  class="img-fluid w-50 rounded-circle img-thumbnail trainer-img"
+                  alt=""
+                />
                 <h2 class="mt-2">Joseph Smith</h2>
                 <p class="lead">Trainer</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, voluptate.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam excepturi, vero nesciunt veniam molestias ratione.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Error, voluptate.Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Adipisci eveniet dignissimos vitae ullam nam
+                  excepturi, vero nesciunt veniam molestias ratione.
+                </p>
                 <div class="d-flex mt-4">
                   <i class="fab fa-facebook fa-2x px-3 text-primary"></i>
                   <i class="fab fa-youtube fa-2x px-3 text-danger"></i>
@@ -305,7 +407,14 @@
       <div class="container">
         <div class="row mt-4">
           <div class="col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d487295.02532044525!2d78.12785129924684!3d17.41215307568293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1614441803128!5m2!1sen!2sin" width="550" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d487295.02532044525!2d78.12785129924684!3d17.41215307568293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1614441803128!5m2!1sen!2sin"
+              width="550"
+              height="400"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
           </div>
           <div class="col-md-6">
             <div class="card text-center">
@@ -315,10 +424,18 @@
               <div class="card-header">
                 <form action="">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Name"
+                    />
                   </div>
                   <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email">
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Email"
+                    />
                   </div>
                   <div class="form-group">
                     <select name="course" id="" class="form-control">
@@ -330,11 +447,18 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <textarea name="" id="" cols="20" rows="4" placeholder="Description" class="form-control"></textarea>
+                    <textarea
+                      name=""
+                      id=""
+                      cols="20"
+                      rows="4"
+                      placeholder="Description"
+                      class="form-control"
+                    ></textarea>
                   </div>
                 </form>
                 <div>
-                  <input type="submit" class="btn btn-primary" value="Submit">
+                  <input type="submit" class="btn btn-primary" value="Submit" />
                 </div>
               </div>
             </div>
@@ -343,19 +467,25 @@
       </div>
     </section>
     <!-- Main footer -->
-  <footer class="p-3 bg-edu text-white text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h3>Copyright &copy; 2021, Edu Training Pvt Ltd</h3>
-          <h6>All Rights Reserved</h6>
-          <h6>Developed and Maintained by
-            <a href="https://github.com/NARAYANAREDDY37" class="text-warning" target="_blank">NARAYANA REDDY</a>
-          </h6>
+    <footer class="p-3 bg-edu text-white text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>Copyright &copy; 2021, Edu Training Pvt Ltd</h3>
+            <h6>All Rights Reserved</h6>
+            <h6>
+              Developed and Maintained by
+              <a
+                href="https://github.com/NARAYANAREDDY37"
+                class="text-warning"
+                target="_blank"
+                >NARAYANA REDDY</a
+              >
+            </h6>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
     <!-- Bootstrap JS files -->
     <script src="bootstrap/js/jquery.js"></script>
